:lipstick: updated name , direction ltr and color theme

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 
-<html dir="rtl">
+<html dir="ltr">
 <head>
   <meta charset="utf-8">
-  <title>ngx-admin Demo Application</title>
+  <title>Apilmac Application</title>
 
   <base href="/">
 
